<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMeetingActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title" />
    
     <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/titleTextView"
        android:ems="15" 
        android:inputType="text"
        android:text="@string/text_spontaneous">
    </EditText>
    
   	<TextView
        android:id="@+id/descTextView"
        android:layout_below="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_description" />
   	
   <EditText
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/descTextView"
        android:ems="15"
        android:inputType="textMultiLine" 
        android:hint="@string/text_description" >
    </EditText>
    
   	<TextView 
   	    android:id="@+id/textStart"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/editDesc"
   	    android:layout_alignParentLeft="true"
   	    android:text="@string/text_start"/>
   	
   	<TextView 
   	    android:id="@+id/textEnd"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/editDesc"
   	    android:layout_alignParentRight="true"
   	    android:text="@string/text_end"/>

    <TimePicker
        android:id="@+id/timePickerEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/timePickerStart" />
    
    <ListView
        android:id="@+id/intervalView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/timePickerStart"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/timePickerEnd"
        android:layout_toRightOf="@+id/timePickerStart" />

    <TimePicker
        android:id="@+id/timePickerStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textStart" />
    
    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePickerStart"
        android:text="@string/text_add"
        android:onClick="add" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addButton"
        android:text="@string/text_cancel" 
        android:onClick="cancel"/>

</RelativeLayout>